2009-04-08  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* tests/completion-simple.c:
	Use proper coding style.

2009-04-08  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/gtksourceview.c:
	Load GtkSourceCompletion only when requested.

2009-04-08  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/gtksourcecompletiontriggerkey.h:
	* gtksourceview/Makefile.am:
	* gtksourceview/gtksourcecompletiontriggerkey.c:
	* tests/completion-simple.c:
	* tests/gsc-provider-test.c:
	* tests/gsc-provider-test.h:
	* tests/gsc-utils-test.c:
	* tests/gsc-utils-test.h:
	* tests/Makefile.am:
	Added test case and added the trigger for key triggering.

2009-04-08  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/gtksourceview.c:
	Fixed warning freeing the completion.

2009-04-07  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/gtksourcecompletion.c:
	* gtksourceview/gtksourceview.c:
	* gtksourceview/gtksourcecompletion.h:
	* gtksourceview/gtksourceview.h:
	Integrate GtkSourceCompletion into GtkSourceView.

2009-04-07  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/gtksourcecompletion.c:
	* gtksourceview/gtksourcecompletioninfo.c:
	* gtksourceview/gtksourcecompletionproposal.c:
	Make the new files compile with the gtksourceview ones.

2009-04-07  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/gtksourceview-marshal.list:
	* gtksourceview/gtksourcecompletion.c:
	* gtksourceview/gtksourcecompletion.h:
	* gtksourceview/gtksourcecompletionprovider.c:
	* gtksourceview/gtksourcecompletioninfo.c:
	* gtksourceview/gtksourcecompletionproposal.c:
	* gtksourceview/gtksourcecompletionprovider.h:
	* gtksourceview/gtksourcecompletioninfo.h:
	* gtksourceview/gtksourcecompletionutils.c:
	* gtksourceview/gtksourcecompletiontrigger.c:
	* gtksourceview/gtksourcecompletionproposal.h:
	* gtksourceview/gtksourcecompletionutils.h:
	* gtksourceview/Makefile.am: