@@ -1,3 +1,8 @@
+2009-04-10  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* tests/completion-simple.c:
+	Add a custom widget for infos.
+
 2009-04-08  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
 	* tests/completion-simple.c:
